styles.css
@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap");

body {
  background-image: url(./still.jpg);
  background-size: cover;
  background-position: 75% center;

  color: rgba(255, 255, 255, 0.7);
  font-family: "Source Code Pro", sans-serif;

  height: 100%;
}

@media only screen and (min-width: 980px) {
  body {
    background-position: center center;
  }
}

.credit {
  color: rgba(255, 255, 255, 0.45);
}

.creditItem {
  text-align: center;
  margin-bottom: 2rem;
}

.creditName {
  font-size: 2rem;
  font-weight: bold;
  text-transform: uppercase;
}

.creditNames {
  text-transform: uppercase;
}

.credits {
  max-width: min(100%, 600px);
  width: 100%;

  position: absolute;
  margin-top: calc(100vh - 100px);
  z-index: 2;
}

@media only screen and (min-width: 600px) {
  .credits {
    position: static;
    margin-top: 0;
    max-width: min(100%, 400px);
  }
}

.creditsSmall {
  color: rgba(255, 255, 255, 0.35);
}

@media only screen and (min-width: 768px) {
  .creditsSmall {
    color: rgba(0, 0, 0, 0.4);
  }
}

html {
  height: 100%;
}

.logo {
  width: min(100%, 600px);
  position: fixed;
}

@media only screen and (min-width: 600px) {
  .logo {
    flex-grow: 1;
    position: static;
  }
}

.logoImage {
  opacity: 0.291;
}

.main {
  display: flex;
  flex-direction: column;
  height: 100%;
}

@media only screen and (min-width: 600px) {
  .main {
    height: 100%;
  }
}

.scrollContainer {
  height: 100vh;
  width: 100vw;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  overflow: auto;
  position: absolute;
  z-index: 2;
}

@media only screen and (min-width: 600px) {
  .scrollContainer {
    position: static;
    overflow: visible;
    height: auto;
    width: auto;
  }
}

.scrollOverlay {
  background: black;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  display: none;
}

